k8s/aut-sys/apps/syncthing/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-lilly
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: >-
      traefik-compress@kubernetescrd,
      traefik-redirect-tls@kubernetescrd,
      traefik-secure-headers@kubernetescrd
spec:
  tls:
    - secretName: tls-sync.aut-sys.de
      hosts: [ sync.aut-sys.de ]
  rules:
    - host: sync.aut-sys.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: syncthing-lilly
                port:
                  name: http
